---
source: spade-tests/src/linear_check.rs
---
entity x(resource: inv bool) -> bool {
    true
}


error: resource is unused
  ┌─ testinput:1:10
  │
1 │ entity x(resource: inv bool) -> bool {
  │          ^^^^^^^^ resource is unused
  │
  = note: resource is an inverted wire (`inv`) which must be set
